receptionist delete
