# app/swagger/swagger.json
@@ -748,6 +748,41 @@
                     }
                 }
             }
+        },
+        "/reception/:id": {
+            "delete": {
+                "tags": [
+                    "reception"
+                ],
+                "summary": "Delete reception worker by worker's id",
+                "description": "Requires apikey",
+                "operationId": "receptionDelete",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "in": "body",
+                        "name": "body",
+                        "description": "Created user object",
+                        "required": true,
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/Login"
+                            }
+                        }
+                    }
+                ],
+                "responses": {
+                    "default": {
+                        "description": "successful operation"
+                    }
+                }
+            }
         }
     },
     "definitions": {
